--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
 	implementation 'com.auth0:java-jwt:3.18.1'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 	runtimeOnly 'org.postgresql:postgresql'
